# zq

./: .gitignore  Cargo.toml  Makefile  README.md
crates/zq/: Cargo.toml
crates/zq-daemon/: Cargo.toml
crates/zq-daemon/src/: forwarder.rs  hub.rs  install.rs  main.rs  pf.rs  process.rs  procinfo.rs  proxy.rs  status.rs  tui_server.rs
crates/zq-proto/: Cargo.toml
crates/zq-proto/src/: config.rs  lib.rs
crates/zq/src/: app.rs  client.rs  event.rs  main.rs
crates/zq/src/ui/: mod.rs
