[workspace]
resolver = "2"
members = [
    "crates/zq-proto",
    "crates/zq-daemon",
    "crates/zq",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
zq-proto = { path = "crates/zq-proto" }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
bytes = "1"
clap = { version = "4", features = ["derive"] }
futures-util = { version = "0.3", features = ["sink"] }
libc = "0.2"
