[package]
name = "zq-daemon"
version.workspace = true
edition.workspace = true

[dependencies]
zq-proto = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
bytes = { workspace = true }
nix = { version = "0.29", features = ["signal", "fs"] }
futures = "0.3"
libc = { workspace = true }
