[package]
name = "zq"
version.workspace = true
edition.workspace = true

[dependencies]
zq-proto = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
futures-util = { workspace = true }
ratatui = "0.30"
crossterm = "0.28"
libc = { workspace = true }
